# face-keypoints-overlay

./: .dockerignore  .env.example  .gitignore  Dockerfile.cpu  Dockerfile.cuda  LICENSE  README.md  docker-compose.cuda.yaml  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
configs/: default.yaml  inference.yaml  overlay.yaml  service.yaml  train.yaml
graphics/glasses_and_mustache/: keypoints.json
notebooks/: research.ipynb
scripts/: inference.py  train.py
src/: __main__.py  api.py  cli.py  dataset.py  detector.py  inference.py  mask.py  model.py  overlay.py  paths.py  training.py  utils.py
src/models/: base_model.py  resnet_like.py
src/services/: overlay_service.py
src/ui/: index.html
src/utils/: common.py  image.py  io.py  keypoints.py  metrics.py  metrics_torch.py  settings.py  visualization.py
tests/: conftest.py  simple_inference_test.py  simple_overlay_test.py  test_cli.py  test_settings.py
weights/: facepoints_base_nme_0_0605.pth
